<resources>
    <string name="app_name">Basic Phrases</string>
    <string name="do_you_nspeak_english">Do you\nspeak English?</string>
    <string name="good_evening">Good evening</string>
    <string name="hello">Hello</string>
    <string name="how_are_you">How are you?</string>
    <string name="i_live_in">I live in</string>
    <string name="my_name_is">My name is</string>
    <string name="please">Please</string>
    <string name="welcome">Welcome</string>
</resources>
